--- a/templates/usr/local/bin/rsync_single_mirror.j2
+++ b/templates/usr/local/bin/rsync_single_mirror.j2
@@ -10,6 +10,16 @@ log_file="{{ repo_mirror_log_path }}/{{ item.name }}/repo_{{ item.name }}.log"
 status_file="{{ repo_mirror_base_path }}/{{ item.name }}.json"
 
 repo_source="{{ item.source_repo }}"
+# compute exclude patterns
+exclude_pattern="{{ item.excludes | join(' ') | default("") }}"
+exclude=""
+if [ -n "${exclude_pattern}" ]
+then
+    # Generate rsync exlude list
+    for excl in ${exclude_pattern}; do
+        exclude="${exclude} --exclude=${excl}"
+    done
+fi
 
 datetime_format="{{ repo_mirror_datetime_format }}"
 bwlimit="{{ item.bwlimit | default(repo_mirror_bwlimit) }}"
@@ -67,6 +77,7 @@ rsync --verbose --log-file="${log}" --no-motd --human-readable --recursive \
     --hard-links --links --safe-links --times \
     --delete-after --delay-updates --temp-dir="${tmp_path}" \
     --bwlimit="${bwlimit}" --timeout="${rsync_timeout}" --contimeout=60 \
+    "${exclude}" \
     "${repo_source}" \
     "${base_path}"
 rsyncexitcode="$?"
