evaluate rsync to expand exclude variable

--- a/templates/usr/local/bin/rsync_single_mirror.j2
+++ b/templates/usr/local/bin/rsync_single_mirror.j2
@@ -17,7 +17,7 @@ if [ -n "${exclude_pattern}" ]
 then
     # Generate rsync exlude list
     for excl in ${exclude_pattern}; do
-        exclude="${exclude} --exclude=${excl}"
+        exclude="${exclude} --exclude='${excl}'"
     done
 fi
 
@@ -73,7 +73,7 @@ fi
 
 # start to rsync the mirror
 log-message 0 "Started {{ item.name }} mirror rsync job."
-rsync --verbose --log-file="${log}" --no-motd --human-readable --recursive \
+eval rsync --verbose --log-file="${log}" --no-motd --human-readable --recursive \
     --hard-links --links --safe-links --times \
     --delete-after --delay-updates --temp-dir="${tmp_path}" \
     --bwlimit="${bwlimit}" --timeout="${rsync_timeout}" --contimeout=60 \
