--- a/templates/usr/local/bin/rsync_ubuntu_mirror.j2
+++ b/templates/usr/local/bin/rsync_ubuntu_mirror.j2
@@ -4,19 +4,20 @@
 # usage:    This script is used to mirror the {{ item.name }} package repository.
 #
 
-tmp_path="{{ repo_mirror_tmp_path }}"
-base_path="{{ repo_mirror_base_path }}/{{ item.name }}"
-log_file="{{ repo_mirror_log_path }}/{{ item.name }}/repo_{{ item.name }}.log"
-status_file="{{ repo_mirror_base_path }}/{{ item.name }}.json"
+repo_name={{ item.name | quote }}
+tmp_path={{ repo_mirror_tmp_path | quote }}
+base_path={{ repo_mirror_base_path | quote }}/$repo_name
+log_file={{ repo_mirror_log_path | quote }}/$repo_name/repo_$repo_name.log
+status_file=$base_path.json
 
-repo_source="{{ item.source_repo }}"
+repo_source={{ item.source_repo | quote }}
 
-datetime_format="{{ repo_mirror_datetime_format }}"
-bwlimit="{{ item.bwlimit | default(repo_mirror_bwlimit) }}"
-rsync_timeout="{{ item.rsync_timeout | default(repo_mirror_rsync_timeout) }}"
+datetime_format={{ repo_mirror_datetime_format | quote }}
+bwlimit={{ item.bwlimit | default(repo_mirror_bwlimit) | quote }}
+rsync_timeout={{ item.rsync_timeout | default(repo_mirror_rsync_timeout) | quote }}
 
-lock="/tmp/sync_{{ item.name }}_mirror.lck"
-rsyncexitcode="-1"
+lock=/tmp/sync_${repo_name}_mirror.lck
+rsyncexitcode=-1
 
 
 function writestatistics() {
@@ -49,10 +50,10 @@ function log-message() {
 
 # create lock or exit if already locked in order to prevent multiple syncs
 exec 9>"${lock}"
-flock -n 9 || log-message 1 "{{ item.name }} mirror rsync job is already running!" 1
+flock -n 9 || log-message 1 "$repo_name mirror rsync job is already running!" 1
 
 # start to rsync the mirror (stage 1)
-log-message 0 "Started stage 1 of {{ item.name }} mirror rsync job."
+log-message 0 "Started stage 1 of $repo_name mirror rsync job."
 rsync --verbose --log-file="${log_file}" --no-motd --human-readable --recursive \
     --hard-links --links --safe-links --times --perms --chmod=u=rwX,go=rX \
     --delay-updates --temp-dir="${tmp_path}" \
@@ -70,7 +71,7 @@ else
 fi
 
 # start to rsync the mirror (stage 2)
-log-message 0 "Started stage 2 of {{ item.name }} mirror rsync job."
+log-message 0 "Started stage 2 of $repo_name mirror rsync job."
 rsync --verbose --log-file="${log_file}" --no-motd --human-readable --recursive \
     --hard-links --links --safe-links --times --perms --chmod=u=rwX,go=rX \
     --delete-after --temp-dir="${tmp_path}" \
@@ -82,7 +83,7 @@ rsyncexitcode="$?"
 if [ "${rsyncexitcode}" = "0" ]; then
     log-message 0 "Second stage of rsync done successfully."
     date -u > ${base_path}/project/trace/$(hostname -f)
-    log-message 1 "Finished {{ item.name }} mirror rsync job." ${rsyncexitcode} # -> exit 0
+    log-message 1 "Finished $repo_name mirror rsync job." ${rsyncexitcode} # -> exit 0
 else
     log-message 1 "First stage of rsync done successfully." ${rsyncexitcode}
 fi
