--- a/templates/usr/local/bin/wget_mirror.j2
+++ b/templates/usr/local/bin/wget_mirror.j2
@@ -4,21 +4,22 @@
 # usage:    This script is used to mirror the {{ item.name }} package repository.
 #
 
-tmp_path="{{ repo_mirror_tmp_path }}"
-base_path="{{ repo_mirror_base_path }}/{{ item.name }}"
-log_file="{{ repo_mirror_log_path }}/{{ item.name }}/repo_{{ item.name }}.log"
-status_file="{{ repo_mirror_base_path }}/{{ item.name }}.json"
+repo_name={{ item.name | quote }}
+tmp_path={{ repo_mirror_tmp_path | quote }}
+base_path={{ repo_mirror_base_path | quote }}/$repo_name
+log_file={{ repo_mirror_log_path | quote }}/$repo_name/repo_$repo_name.log
+status_file=$base_path.json
 
-repo_source="{{ item.source_repo }}"
+repo_source={{ item.source_repo | quote }}
 
-datetime_format="{{ repo_mirror_datetime_format }}"
-bwlimit="{{ item.bwlimit | default(repo_mirror_bwlimit) }}"
-rsync_timeout="{{ item.rsync_timeout | default(repo_mirror_rsync_timeout) }}"
+datetime_format={{ repo_mirror_datetime_format | quote }}
+bwlimit={{ item.bwlimit | default(repo_mirror_bwlimit) | quote }}
+rsync_timeout={{ item.rsync_timeout | default(repo_mirror_rsync_timeout) | quote }}
 
-lock="/tmp/sync_{{ item.name }}_mirror.lck"
-exitcode="-1"
+lock=/tmp/sync_${repo_name}_mirror.lck
+exitcode=-1
 
-remotegpgkey="{{ item.remotegpgkey }}"
+remotegpgkey={{ item.remotegpgkey | quote }}
 
 
 function writestatistics() {
@@ -51,9 +52,9 @@ function log-message() {
 
 # create lock or exit if already locked in order to prevent multiple syncs
 exec 9>"${lock}"
-flock -n 9 || log-message 1 "{{ item.name }} mirror rsync job is already running!" 1
+flock -n 9 || log-message 1 "$repo_name mirror rsync job is already running!" 1
 
-log-message 0 "Started {{ item.name }} mirror sync job."
+log-message 0 "Started $repo_name mirror sync job."
 
 # Sync GPG Key
 wget -c ${remotegpgkey} --directory-prefix=${base_path}
@@ -69,7 +70,7 @@ exitcode="$?"
 find ${base_path} -name '*html' -exec rm {} \;
 
 if [ "${exitcode}" = "0" ]; then
-    log-message 1 "Finished {{ item.name }} mirror sync job." ${exitcode} # = 0
+    log-message 1 "Finished $repo_name mirror sync job." ${exitcode} # = 0
 else
     log-message 1 "Sync job had an error: ${exitcode}" ${exitcode} # >= 1
 fi
