rsync_debian_mirror: Adapt Jinja2 variable pipeline order for .excludes
Semantically, it makes more sense to first probe the variable for
existence, default to an empty list if not set, then continue to process
the list.

--- a/templates/usr/local/bin/rsync_debian_mirror.j2
+++ b/templates/usr/local/bin/rsync_debian_mirror.j2
@@ -22,7 +22,7 @@ rsync_timeout={{ item.rsync_timeout | default(repo_mirror_rsync_timeout) | quote
 lock=/tmp/sync_${repo_name}_mirror.lck
 rsyncexitcode=-1
 
-archexclude={{ item.excludes | join(" ") | default("") | quote }}
+archexclude={{ item.excludes | default([]) | join(" ") | quote }}
 trace=project/trace/{{ repo_mirror_fqdn | quote }}
 
 # default rsync options
