(fix): add missing file extension to logfile

--- a/templates/etc/logrotate.d/config.template.j2
+++ b/templates/etc/logrotate.d/config.template.j2
@@ -1,4 +1,4 @@
-{{ repo_mirror_log_path }}/{{ item.name }}/repo_{{ item.name }} {
+{{ repo_mirror_log_path }}/{{ item.name }}/repo_{{ item.name }}.log {
   rotate 10
   daily
   compress
