(fix): use EOF syntax to make text more readable

--- a/templates/usr/local/bin/rsync_debian_mirror.j2
+++ b/templates/usr/local/bin/rsync_debian_mirror.j2
@@ -54,20 +54,22 @@ function writetracefile() {
         fi
     done
 
-    echo "$(LC_ALL=POSIX LANG=POSIX date -u)" >> ${base_path}/${trace}.new
-    echo "Date: $(LC_ALL=POSIX LANG=POSIX date -u -R)" >> ${base_path}/${trace}.new
-    echo "Software: SySync v1" >> ${base_path}/${trace}.new
-    echo "Running on host: ${mirrorname}" >> ${base_path}/${trace}.new
-
-    echo "Architectures: GUESSED:{${archlist}}" >> ${base_path}/${trace}.new
-    echo "Architectures-Configuration: $globalarchlist" >> ${base_path}/${trace}.new
-    echo "Throughput: 1Gb" >> ${base_path}/${trace}.new
-    echo "Upstream-mirror: ${repo_source}" >> ${base_path}/${trace}.new
-
-    echo "Location: Bern/Bern/Switzerland/Europe" >> ${base_path}/${trace}.new
-    echo "Country: CH" >> ${base_path}/${trace}.new
-    echo "Maintainer: Adfinis AG" >> ${base_path}/${trace}.new
-    echo "${mirrorname}" >> ${base_path}/project/trace/_traces
+	# let those tabs be tabs from here...
+	cat <<- EOF >> "$base_path/$trace.new"
+	$(LC_ALL=POSIX LANG=POSIX date -u)
+	Date: $(LC_ALL=POSIX LANG=POSIX date -u -R)
+	Software: SySync v1
+	Running on Host: $mirrorname
+	Architectures: GUESSED:{$archlist}
+	Architecture-Configuration: $globalarchlist
+	Throughput: 1Gb
+	Upstream-mirror: $repo_source
+	Location: Bern/Bern/Switzerland/Europe
+	Country: CH
+	Maintainer: Adfinis AG
+	$mirrorname
+	EOF
+	# ....until here
 
     mv "${base_path}/${trace}.new" "${base_path}/${trace}"
 
