(fix): little casing mistake

--- a/templates/usr/local/bin/rsync_debian_mirror.j2
+++ b/templates/usr/local/bin/rsync_debian_mirror.j2
@@ -59,7 +59,7 @@ function writetracefile() {
 	$(LC_ALL=POSIX LANG=POSIX date -u)
 	Date: $(LC_ALL=POSIX LANG=POSIX date -u -R)
 	Software: SySync v1
-	Running on Host: $mirrorname
+	Running on host: $mirrorname
 	Architectures: GUESSED:{$archlist}
 	Architecture-Configuration: $globalarchlist
 	Throughput: 1Gb
