--- a/templates/usr/local/bin/rsync_debian_mirror.j2
+++ b/templates/usr/local/bin/rsync_debian_mirror.j2
@@ -26,7 +26,6 @@ rsyncexitcode=-1
 archexclude={{ item.excludes | default([]) | join(" ") | quote }}
 trace=project/trace/{{ repo_mirror_fqdn | quote }}
 master_trace="$base_path/project/trace/master"
-archive_version=$(grep "Archive serial:" $master_trace)
 
 # default rsync options
 rsync_opts="--bwlimit=${bwlimit} --timeout=600 --verbose --log-file="${log_file}" --perms --chmod=u=rwX,go=rX --no-motd --human-readable --recursive --hard-links --links --safe-links --times --delay-updates --temp-dir="${tmp_path}""
@@ -60,6 +59,7 @@ function writetracefile() {
 	cat <<- EOF >> "$base_path/$trace.new"
 	$(LC_ALL=POSIX LANG=POSIX date -u)
 	Date: $(LC_ALL=POSIX LANG=POSIX date -u -R)
+	Archive serial: $master_trace
 	Software: SySync v1
 	Running on host: $mirrorname
 	Architectures: GUESSED:{$archlist}
@@ -74,8 +74,6 @@ function writetracefile() {
 	# ....until here
 
     mv "${base_path}/${trace}.new" "${base_path}/${trace}"
-
-    echo "$archive_version" >> ${base_path}/${trace}
 
     if grep -q "pkg.adfinis.com" ${base_path}/project/trace/_traces; then
            echo "pkg.adfinis.com" >> ${base_path}/project/trace/_traces
