--- a/templates/usr/local/bin/rsync_single_mirror.j2
+++ b/templates/usr/local/bin/rsync_single_mirror.j2
@@ -78,7 +78,7 @@ fi
 log-message 0 "Started $repo_name mirror rsync job."
 rsync --verbose --log-file="${log}" --no-motd --human-readable --recursive \
     --hard-links --links --safe-links --times --perms --chmod=u=rwX,go=rX \
-    --delete-during --temp-dir="${tmp_path}" {% for i in item.rsync_excludes %} --exclude "{{ i }}" {% endfor %} \
+    --delete-during --temp-dir="${tmp_path}" {% if item.rsync_excludes %}{% for i in item.rsync_excludes %}--exclude "{{ i }}" {% endfor %}{% endif %} \
     --bwlimit="${bwlimit}" --timeout="${rsync_timeout}" --contimeout=60 \
     "${repo_source}" \
     "${base_path}"
