feat: add toggle to keep source File Permissions

--- a/templates/usr/local/bin/rsync_debian_mirror.j2
+++ b/templates/usr/local/bin/rsync_debian_mirror.j2
@@ -28,7 +28,7 @@ trace=project/trace/{{ repo_mirror_fqdn | quote }}
 master_trace="$base_path/project/trace/master"
 
 # default rsync options
-rsync_opts="--bwlimit=${bwlimit} --timeout=600 --verbose --log-file="${log_file}" --perms --chmod=u=rwX,go=rX --no-motd --human-readable --recursive --hard-links --links --safe-links --times --delay-updates --temp-dir="${tmp_path}" --exclude={{ repo_mirror_fqdn }}"
+rsync_opts="--bwlimit=${bwlimit} --timeout=600 --verbose --log-file="${log_file}" --perms{% if item.keepPermissions is not defined or item.keepPermissions != true %} --chmod=u=rwX,go=rX{% endif %} --no-motd --human-readable --recursive --hard-links --links --safe-links --times --delay-updates --temp-dir="${tmp_path}" --exclude={{ repo_mirror_fqdn }}"
 stage1_rsync_opts="--exclude=Packages* --exclude=Sources* --exclude=Release* --exclude=InRelease --exclude=i18n/* --exclude=ls-lR*"
 stage2_rsync_opts="--max-delete=40000 --delay-updates --delete --delete-excluded"
 
