--- a/templates/usr/local/bin/rsync_ubuntu_mirror.j2
+++ b/templates/usr/local/bin/rsync_ubuntu_mirror.j2
@@ -67,7 +67,7 @@ flock -n 9 || log-message 1 "$repo_name mirror rsync job is already running!" 1
 # start to rsync the mirror (stage 1)
 log-message 0 "Started stage 1 of $repo_name mirror rsync job."
 rsync --verbose --log-file="${log_file}" --no-motd --human-readable --recursive \
-    --hard-links --links --safe-links --times --perms --chmod=u=rwX,go=rX \
+    --hard-links --links --safe-links --times --perms{% if item.keepPermissions is not defined or item.keepPermissions != true %} --chmod=u=rwX,go=rX{% endif %} \
     --delay-updates --temp-dir="${tmp_path}" \
     --bwlimit="${bwlimit}" --timeout=120 --contimeout=60 \
     --exclude "Packages*" --exclude "Sources*" \
@@ -85,7 +85,7 @@ fi
 # start to rsync the mirror (stage 2)
 log-message 0 "Started stage 2 of $repo_name mirror rsync job."
 rsync --verbose --log-file="${log_file}" --no-motd --human-readable --recursive \
-    --hard-links --links --safe-links --times --perms --chmod=u=rwX,go=rX \
+    --hard-links --links --safe-links --times --perms{% if item.keepPermissions is not defined or item.keepPermissions != true %} --chmod=u=rwX,go=rX{% endif %} \
     --delete-during --temp-dir="${tmp_path}" \
     --bwlimit="${bwlimit}" --timeout=120 --contimeout=60 \
     "${repo_source}" \
